--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ li.dropdown {
     <a href="#">COMING SOON</a>
   </li>
   <li class="dropdown">
-    <a href="#">Stream Staff</a>
+    <a href="http://www.exanosis621.online/staff">Stream Staff</a>
     <li><a href="#">Game Library</a></li>
   <li><a href="#">About</a></li>
 </ul>
