--- a/staff/index.html
+++ b/staff/index.html
@@ -130,9 +130,9 @@ li.dropdown {
     <a href="#">COMING SOON</a>
   </li>
   <li class="dropdown">
-    <a href="#">Stream Staff</a>
-    <li><a href="#">Game Library</a></li>
-  <li><a href="#">About</a></li>
+    <a href="http://www.exanosis621.online/staff">Stream Staff</a>
+    <li><a href="http://www.exanosis621.online/games">Game Library</a></li>
+  <li><a href="http://www.exanosis621.online/about">About</a></li>
 </ul>
 </div>
 
