--- a/template.html
+++ b/template.html
@@ -80,14 +80,14 @@ li.dropdown {
 
       <div id="banner">
        <div id="menu-bar"><ul>
-  <li><a class="active" href="#">Home</a></li>
+  <li><a class="active" href="http://www.exanosis621.online/">Home</a></li>
   <li class="dropdown">
     <a href="#">COMING SOON</a>
   </li>
   <li class="dropdown">
-    <a href="#">Stream Staff</a>
-    <li><a href="#">Game Library</a></li>
-  <li><a href="#">About</a></li>
+    <a href="http://www.exanosis621.online/staff">Stream Staff</a>
+    <li><a href="http://www.exanosis621.online/games">Game Library</a></li>
+  <li><a href="http://www.exanosis621.online/about">About</a></li>
 </ul>
 </div>
 
