--- a/staff/index.html
+++ b/staff/index.html
@@ -37,6 +37,13 @@ hr {
   margin-left: 15px;
   float: right;
 }
+.izzt:before{
+  content: 'Izzybeotch is currently a Channel Moderator. She has been a member of the Stream Staff for around a month. Izzy has a tendency to !attack anyone that chats in the stream. Her favourite word is \'ghey\', and will go HAM on anyone who !attacks CrazyCat159.';
+  
+}
+.izzt:hover:before{
+  content: 'GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY GHEY';
+}
 .lie{
   visibility: hidden;
   position: absolute;
@@ -195,8 +202,8 @@ li.dropdown {
       <div class="izzyb">
         <img src="IZZY.png" alt="izzy_custom" width="200" height="100">
         <h3>Izzybeotch</h3>
-        <span class="desc">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac pharetra augue. Nulla fringilla a purus et aliquam. Pellentesque vestibulum porttitor dolor, nec aliquam justo condimentum vel. Curabitur interdum elit in nunc porta suscipit. Aliquam volutpat est id blandit egestas. Etiam quis felis eget est cursus porta. Nunc finibus urna eget erat ornare varius. Donec eget finibus tortor, ut pharetra odio. Suspendisse aliquam turpis eget ex blandit hendrerit. Mauris luctus justo eu nisl consectetur scelerisque. Etiam convallis imperdiet felis sit amet consectetur. Donec at ante finibus, pretium nibh et, pretium urna. Cras non pharetra diam. Praesent id erat in tortor.
+        <span class="desc izzt">
+          
         </span>
         <span class="links"><a href="http://www.twitch.tv/izzybeotch"><img src="twitch.png" alt="twitch" width="25" height="25"></a></span>
       </div>
