--- a/staff/index.html
+++ b/staff/index.html
@@ -213,24 +213,26 @@ li.dropdown {
         <img src="bot" alt="exa_bot" width="100" height="100">
         <h3>Exanosis621bot</h3>
         <span class="desc">
-          <a href="#" onclick="myFunction()">Test</a>
+          Bot commands will appear here. Also needing a photo of the bot or a picture to represent it or something
         </span>
         <span class="links"></span>
       </div>
       <a name="bot"></a>
       </section>
       <footer>
-       <p class="footer">Created with care by <a href="http://twitter.com/LewdCode">Ha</a><a href="http://www.youtube.com/codingcoal">xi</a><a href="http://www.twitch.tv/haxial">al</a></p>
+       <p class="footer">Created with care by <a href="http://twitter.com/LewdCode">Ha</a><a href="http://www.youtube.com/codingcoal">xi</a><a href="http://www.twitch.tv/haxial">al</a><br>
+       This site is run as NOT FOR PROFIT. <a href="#" onclick="myFunction()">Donations</a> 100% go back into improving this site and keeping it online.
+       </p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     <script>
     function myFunction() {
     var x;
-    if (confirm("WARNING: This donation link is to support the Website, not Exanosis. \nPress OK to confirm.") == true) {
+    if (confirm("WARNING: This donation link is to support the Website, not Exanosis. \n\n\nTo continue to SITE donation, click \"OK\". To donate to Exanosis, click \"Cancel\" \n\n TO CLOSE THIS POPUP, PRESS ESCAPE") == true) {
         x = "http://paypal.me/intesvensk";
     } else {
-        x = "#";
+        x = "https://www.twitchalerts.com/donate/exanosis621";
     }
     window.location.href = x;
 }
