--- a/staff/index.html
+++ b/staff/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="keywords" content="Exanosis621, exanosis, twitchtv, streamer">
+    <meta name="description" content="Official Website of Exanosis621">
     <title>Exanosis621 Official Website -|- Stream Staff</title>
     <style type="text/css">
     .crazycat, .crazycat .desc{
