--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="keywords" content="Exanosis621, exanosis, twitchtv, streamer">
     <meta name="description" content="Official Website of Exanosis621">
+    <meta name="twitter:card" content="product">
+<meta name="twitter:site" content="@exanosis621">
+<meta name="twitter:creator" content="@LewdCode">
+<meta name="twitter:title" content="Exanosis621 Official Website">
     <title>Exanosis621 Official Website</title>
     <style type="text/css">
     
