--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="twitter:site" content="@exanosis621">
 <meta name="twitter:creator" content="@LewdCode">
 <meta name="twitter:title" content="Exanosis621 Official Website">
+<meta name="twitter:image" content="https://pbs.twimg.com/profile_images/745716302057189376/WX_lo7sV.jpg">
 <meta name="twitter:description" content="Welcome to the Official Website of Exanosis621">
     <title>Exanosis621 Official Website</title>
     <style type="text/css">
