--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+  <link rel='shortcut icon' href='favicon.jpg' type='image/x-icon'/ >
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="keywords" content="Exanosis621, exanosis, twitchtv, streamer">
@@ -25,7 +26,9 @@
 li {
     float: left;
 }
-
+.desc {
+  font-variant: small-caps;
+}
 li a, .dropbtn {
   font-weight: bold;
     display: inline-block;
@@ -110,10 +113,11 @@ li.dropdown {
         <ul></ul>
       </nav>
       <section>
-      <h3>Main Section</h3>
-      <!-- 
-        Main Content - About Exa, mods etc
-      -->
+      <h3>Welcome to the Official Exanosis621 website.</h3>
+      <span class="desc">
+        
+
+      </span>
       </section>
      <footer>
        <p class="footer">Created with care by <a href="http://twitter.com/LewdCode">Ha</a><a href="http://www.youtube.com/codingcoal">xi</a><a href="http://www.twitch.tv/haxial">al</a><br>
