--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link rel='shortcut icon' href='favicon.jpg' type='image/x-icon'/ >
     <meta name="keywords" content="Exanosis621, exanosis, twitchtv, streamer">
     <meta name="description" content="Official Website of Exanosis621">
     <title>Exanosis621 Official Website - Page Not Found</title>
