--- a/staff/index.html
+++ b/staff/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel='shortcut icon' href='favicon.jpg' type='image/x-icon'/ >
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="keywords" content="Exanosis621, exanosis, twitchtv, streamer">
     <meta name="description" content="Official Website of Exanosis621">
