--- a/games/index.html
+++ b/games/index.html
@@ -38,7 +38,14 @@ li a:hover, .dropdown:hover .dropbtn {
 li.dropdown {
     display: inline-block;
 }
-
+.footer{
+  font-variant: small-caps;
+}
+hr {
+  height: 2px;
+  border: none;
+  color:#dd4818;
+}
 .dropdown-content {
     display: none;
     position: absolute;
@@ -105,10 +112,18 @@ li.dropdown {
         <ul></ul>
       </nav>
       <section>
-      <h3>Main Section</h3>
-      <!-- 
-        Main Content - About Exa, mods etc
-      -->
+      <h3>Exanosis has/will play the following games on his stream:</h3>
+      
+      <div class="">
+        <img src="">
+        <!--Name--><h3></h3>
+        <span class="desc">
+
+        </span>
+        <span class="links"></span>
+      </div>
+      <hr />
+
       </section>
     <footer>
        <p class="footer">Created with care by <a href="http://twitter.com/LewdCode">Ha</a><a href="http://www.youtube.com/codingcoal">xi</a><a href="http://www.twitch.tv/haxial">al</a><br>
