--- a/template.html
+++ b/template.html
@@ -20,7 +20,14 @@
 li {
     float: left;
 }
-
+.footer,{
+  font-variant: small-caps;
+}
+hr {
+  height: 2px;
+  border: none;
+  color:#dd4818;
+}
 li a, .dropbtn {
   font-weight: bold;
     display: inline-block;
