--- a/staff/index.html
+++ b/staff/index.html
@@ -289,6 +289,26 @@ li.dropdown {
     <td>!attackrules</td>
     <td>Display the <a href="#bot" onclick="atrule()">attack rules</a></td>
   </tr>
+  <tr>
+    <td>attack</td>
+    <td>!attack &lt;target&gt;</td>
+    <td>Attack the person specified. See <a href="#bot" onclick="atrule()">Attack Rules</a> for more information</td>
+  </tr>
+  <tr>
+    <td>currentsong</td>
+    <td>!curretnsong</td>
+    <td>Find out the song currently playing (if song requests are on)</td>
+  </tr>
+  <tr>
+    <td>songrequest</td>
+    <td>!songrequest &lt;youtube link&gt;</td>
+    <td>Add the song specified to the Song Request queue</td>
+  </tr>
+  <tr>
+    <td>skip</td>
+    <td>!skip</td>
+    <td>Vote to skip the current song</td>
+  </tr>
   </table>
         </span>
         <span class="links"></span>
