--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ li.dropdown {
       <section>
       <h3>Welcome to the Official Exanosis621 website.</h3>
       <span class="desc">
-        
+        <iframe src="https://player.twitch.tv/?channel=exanosis621" frameborder="0" scrolling="no" height="378" width="600"></iframe>
 
       </span>
       </section>
